auth logo added

--- a/content/posts/2020-04-08-oauth-2.0-introduction-for-beginners.md
+++ b/content/posts/2020-04-08-oauth-2.0-introduction-for-beginners.md
@@ -2,7 +2,7 @@
 date: 2020-04-08
 title: 'Introduction to OAuth 2.0 Authz Framework'
 template: post
-thumbnail: '../thumbnails'
+thumbnail: '../thumbnails/authlogo.png'
 slug: Beginners-Guide-to-ReactJS
 categories:
   - Popular
