blog in progress

--- a/content/posts/2020-04-08-oauth-2.0-introduction-for-beginners.md
+++ b/content/posts/2020-04-08-oauth-2.0-introduction-for-beginners.md
@@ -3,7 +3,7 @@ date: 2020-04-08
 title: 'Introduction to OAuth 2.0 Authz Framework'
 template: post
 thumbnail: '../thumbnails/authlogo.png'
-slug: Beginners-Guide-to-ReactJS
+slug: Introduction-to-OAuth-2.0-Authorisation-Framework
 categories:
   - Popular
   - OAuth2.0
